--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,30 @@
+# docker-compose.yml
 
 services:
   selenium-hub:
-    image: selenium/hub
+    image: selenium/hub:4.18.1
     container_name: selenium-hub
     ports:
-      - "4442:4442"
-      - "4443:4443"
       - "4444:4444"
-
+  
   chrome:
-    image: selenium/node-chrome
+    image: selenium/node-chrome:4.18.1
+    volumes:
+      - /dev/shm:/dev/shm
     depends_on:
       - selenium-hub
     environment:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    networks:
-      - grid
 
   firefox:
-    image: selenium/node-firefox
+    image: selenium/node-firefox:4.18.1
+    volumes:
+      - /dev/shm:/dev/shm
     depends_on:
       - selenium-hub
     environment:
       - SE_EVENT_BUS_HOST=selenium-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    networks:
-      - grid
-
-networks:
-  grid:
